--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                                 <p class="text-sm pt-2 leading-4 leading-none text-gray-300">State-of-the-Art Transformer Network</p>
                             </div>
                             <div class="border-b pb-4 border-gray-400 border-solid pt-2">
-                                <a class="text-lg font-medium leading-5 text-gray-100 mt-2 tracking-wider">MONAI Model Zoo</a>
+                                <a class="text-lg font-medium leading-5 text-gray-100 mt-2 tracking-wider">MONAI Bundle</a>
                                 <p class="text-sm pt-2 leading-4 leading-none text-gray-300">Pre-tained Model Repository</p>
                             </div>
                             <div class="border-b pb-4 border-gray-400 border-solid pt-2">
