Update event time and date

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
           <div class="flex flex-col justify-center py-6 text-center rounded-sm">
             <h1 class="text-gray-100 font-bold leading-none text-5xl sm:text-6xl pb-6 tracking-wide">MONAI<span class="text-brand-secondary"> Meetup</span></h1>
             <div class='border-2 border-solid border-brand-secondary px-16 mx-auto'>
-              <p class="text-gray-100 mt-6 text-xl sm:text-3xl font-bold">July 14th, 2022</p>
-              <p class="text-gray-100 mt-2 mb-6 text-xl sm:text-3xl font-bold">8am to 11am (Pacific Time)</p>
+              <p class="text-gray-100 mt-6 text-xl sm:text-3xl font-bold">July 28th, 2022</p>
+              <p class="text-gray-100 mt-2 mb-6 text-xl sm:text-3xl font-bold">8am to 11am CET</p>
             </div>
             <div class="flex flex-col mt-8 space-y-4 sm:items-center sm:justify-center sm:flex-row sm:space-y-0 sm:space-x-4">
               <a href="#" class="px-8 py-3 text-xl sm:text-3xl font-semibold rounded bg-white text-brand-primary">Register Today</a>
