--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
               <p class="text-gray-100 mt-2 mb-6 text-xl sm:text-3xl font-bold">8am to 11am CET</p>
             </div>
             <div class="flex flex-col mt-8 space-y-4 sm:items-center sm:justify-center sm:flex-row sm:space-y-0 sm:space-x-4">
-              <a href="#" class="px-8 py-3 text-xl sm:text-3xl font-semibold rounded bg-white text-brand-primary">Register Today</a>
+              <a href="https://forms.gle/Rdv3XyEkpSdbqvw88" class="px-8 py-3 text-xl sm:text-3xl font-semibold rounded bg-white text-brand-primary">Register Today</a>
               <a href="https://www.github.com/Project-MONAI" target="_blank" class="px-8 py-3 text-xl sm:text-3xl font-semibold border rounded border-gray-100">MONAI GitHub</a>
             </div>
             <p class="text-gray-100 mt-6 mb-4 px-4 sm:px-24 text-2xl w-full sm:w-3/4 text-center mx-auto">Register today to learn more about new efforts in MONAI including:</p>
