--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
 
   <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <title>Redirecting to https://monai.io/monai-meetup/</title>
+    <meta http-equiv="refresh" content="0; URL=https://monai.io/monai-meetup/">
+    <link rel="canonical" href="https://monai.io/monai-meetup/">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MONAI Meetup</title>
